tests/neg/functions.stk
fun foo(x: Int): Int =
  var m = x x +
  val f = (n: Int) =>
    m = 10  // error
    m n *   // error
  f x
